cmd/info: show size information
Co-authored-by: Mike McQuaid <mike@mikemcquaid.com>
Co-authored-by: Markus Reiter <me@reitermark.us>

--- a/manpages/brew.1
+++ b/manpages/brew.1
@@ -312,6 +312,9 @@ Which type of analytics data to retrieve\. The value for \fIcategory\fP must be 
 \fB\-\-github\fP
 Open the GitHub source page for \fIformula\fP and \fIcask\fP in a browser\. To view the history locally: \fBbrew log \-p\fP \fIformula\fP or \fIcask\fP
 .TP
+\fB\-\-fetch\-manifest\fP
+Fetch GitHub Packages manifest for extra information when \fIformula\fP is not installed\.
+.TP
 \fB\-\-json\fP
 Print a JSON representation\. Currently the default value for \fIversion\fP is \fBv1\fP for \fIformula\fP\&\. For \fIformula\fP and \fIcask\fP use \fBv2\fP\&\. See the docs for examples of using the JSON output: 
 .UR https://docs\.brew\.sh/Querying\-Brew
