cmd/--cache: avoid exception on missing HEAD
Also add cask to description

--- a/manpages/brew.1
+++ b/manpages/brew.1
@@ -938,7 +938,7 @@ Include only casks\.
 .SS "\fB\-\-cache\fP \fR[\fIoptions\fP] \fR[\fIformula\fP|\fIcask\fP \.\.\.]"
 Display Homebrew\[u2019]s download cache\. See also \fBHOMEBREW_CACHE\fP\&\.
 .P
-If \fIformula\fP is provided, display the file or directory used to cache \fIformula\fP\&\.
+If a \fIformula\fP or \fIcask\fP is provided, display the file or directory used to cache it\.
 .TP
 \fB\-\-os\fP
 Show cache file for the given operating system\. (Pass \fBall\fP to show cache files for all operating systems\.)
