--- a/manpages/brew.1
+++ b/manpages/brew.1
@@ -2470,7 +2470,7 @@ A space\-separated list of casks\. Homebrew will refuse to install a cask if it 
 A space\-separated list of formulae\. Homebrew will refuse to install a formula or cask if it or any of its dependencies is on this list\.
 .TP
 \fBHOMEBREW_FORBIDDEN_LICENSES\fP
-A space\-separated list of licenses\. Homebrew will refuse to install a formula if it or any of its dependencies has a license on this list\.
+A space\-separated list of SPDX license identifiers\. Homebrew will refuse to install a formula if it or any of its dependencies has a license on this list\.
 .TP
 \fBHOMEBREW_FORBIDDEN_OWNER\fP
 The person who has set any \fBHOMEBREW_FORBIDDEN_*\fP variables\.
