--- a/manpages/brew.1
+++ b/manpages/brew.1
@@ -403,6 +403,9 @@ Prepare the formula for eventual bottling during installation, skipping any post
 \fB\-\-skip\-post\-install\fP
 Install but skip any post\-install steps\.
 .TP
+\fB\-\-skip\-link\fP
+Install but skip linking the keg into the prefix\.
+.TP
 \fB\-\-bottle\-arch\fP
 Optimise bottles for the specified architecture rather than the oldest architecture supported by the version of macOS the bottles are built on\.
 .TP
